[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]

[node name="placeholder" type="Control"]
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_right = 550.0
margin_bottom = 153.0
text = "Dette er ikke en placeholder, dette er det fulde spil! lev med det"

[node name="menu" type="ItemList" parent="."]
pause_mode = 2
margin_left = 316.0
margin_top = 41.0
margin_right = 702.0
margin_bottom = 253.0

[node name="Continue" type="Button" parent="menu"]
margin_left = 91.0
margin_top = 6.0
margin_right = 293.0
margin_bottom = 64.0
text = "Continue"

[node name="Save" type="Button" parent="menu"]
margin_left = 90.0
margin_top = 77.0
margin_right = 292.0
margin_bottom = 135.0
text = "Save"

[node name="exit" type="Button" parent="menu"]
margin_left = 90.0
margin_top = 149.0
margin_right = 292.0
margin_bottom = 207.0
text = "Exit"

[node name="saved" type="Button" parent="."]
margin_left = 302.0
margin_top = 111.0
margin_right = 711.0
margin_bottom = 185.0
text = "Game has been saved, You can now exit the game or continue"

[connection signal="button_down" from="menu/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="menu/Save" to="." method="_on_Save_button_down"]
[connection signal="button_down" from="menu/exit" to="." method="_on_exit_button_down"]
